# winamp

./: .gitignore  AUTHORS  CMakeLists.txt  Cargo.toml  ChangeLog  ChangeLog.rus  ChangeLog.svn  Honey_the_Cat.blend  Honey_the_Cat.blend.import  Honey_the_Cat.webp.import  LICENSE  LICENSE.md  README  README.RUS  README.UKR  README.md  SOURCES.md  explotano.ogg.import  export_presets.cfg  funny.glb  funny.glb.import  funny_103024F4.jpg.import  funny_185C0AB4.jpg.import  funny_185C3CB4.jpg.import  funny_1A88DEB4.jpg.import  funny_1AA649B4.jpg.import  funny_1AA64B74.jpg.import  funny_1AA65634.jpg.import  funny_1AA660F4.jpg.import  funny_1AA66F34.jpg.import  funny_1AA670F4.jpg.import  funny_1AA67474.jpg.import  funny_1B369BB4.jpg.import  funny_1B369BB4_16.jpg.import  funny_1B369F34.jpg.import  funny_1B36A0F4.jpg.import  funny_1B36A634.jpg.import  funny_1B36BD74.jpg.import  funny_1B36D2F4.jpg.import  funny_1B36DBB4.jpg.import  (+11 more)
.tx/: config
BuildTools/: vlc-3.0.21-win32.exe.ppdb
Scenes/: highscorecatexplotano.tscn  highscorefps.tscn  honey.tscn  honey_the_cat.tscn  honeysimulator.tscn  titlescreen.tscn
Scripts/: AudioStreamPlayer2.gd  Autoload.gd  Camera.gd  CameraSpin.gd  HighScoreSpawner.gd  HighscoreCatExplotanoLabel3D.gd  HighscoreCatExplotanoSpawner.gd  Label3D.gd  MeshInstance3D.gd  Spawner.gd  Sprite3D.gd  TitleScreenLabel.gd  highscoreLabel3D.gd  honey_the_cat.gd  titlescreen.gd
explotano/: explotano00.png.import  explotano01.png.import  explotano02.png.import  explotano03.png.import  explotano04.png.import  explotano05.png.import  explotano06.png.import  explotano07.png.import  explotano08.png.import  explotano09.png.import  explotano10.png.import  explotano11.png.import  explotano12.png.import  explotano13.png.import  explotano14.png.import  explotano15.png.import  explotano16.png.import
src/: main.rs
src/plugins/Visual/projectm/: CMakeLists.txt  projectm.pro  projectm4widget.cpp  projectm4widget.h  projectmplugin.cpp  projectmplugin.h  projectmwidget.cpp  projectmwidget.h  projectmwrapper.cpp  projectmwrapper.h  visualprojectmfactory.cpp  visualprojectmfactory.h
src/plugins/Visual/projectm/translations/: projectm_plugin_bg.ts  projectm_plugin_cs.ts  projectm_plugin_de.ts  projectm_plugin_el.ts  projectm_plugin_en.ts  projectm_plugin_es.ts  projectm_plugin_fi.ts  projectm_plugin_fr.ts  projectm_plugin_gl_ES.ts  projectm_plugin_he.ts  projectm_plugin_hu.ts  projectm_plugin_id.ts  projectm_plugin_it.ts  projectm_plugin_ja.ts  projectm_plugin_kk.ts  projectm_plugin_ko.ts  projectm_plugin_lt.ts  projectm_plugin_nl.ts  projectm_plugin_pl_PL.ts  projectm_plugin_pt.ts  projectm_plugin_pt_BR.ts  projectm_plugin_ru.ts  projectm_plugin_sk.ts  projectm_plugin_sr_BA.ts  projectm_plugin_sr_RS.ts  projectm_plugin_sv.ts  projectm_plugin_tr.ts  projectm_plugin_uk_UA.ts  projectm_plugin_zh_CN.ts  projectm_plugin_zh_TW.ts  translations.qrc
(+716 files in other folders)
